// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmField allows for style customization 1`] = `
<input
  class="tm-field tm-field-size-lg"
  type="text"
/>
`;

exports[`TmField displays a disabled toggle 1`] = `
<label
  class="tm-toggle unchecked"
>
  <div
    class="tm-toggle-wrapper"
  >
    <span>
      
      bad
    
    </span>
     
    <div
      class="toggle-option-checked"
    >
      <div>
        cool
      </div>
    </div>
     
    <div
      class="toggle-option-unchecked"
    >
      <div>
        bad
      </div>
    </div>
     
    <div
      class="toggle-handle"
    />
     
    <input
      disabled="disabled"
      type="checkbox"
      value="false"
    />
  </div>
</label>
`;

exports[`TmField displays a disabled toggle 2`] = `
<label
  class="tm-toggle unchecked"
>
  <div
    class="tm-toggle-wrapper"
  >
    <span>
      
      bad
    
    </span>
     
    <div
      class="toggle-option-checked"
    >
      <div>
        cool
      </div>
    </div>
     
    <div
      class="toggle-option-unchecked"
    >
      <div>
        bad
      </div>
    </div>
     
    <div
      class="toggle-handle"
    />
     
    <input
      disabled="disabled"
      type="checkbox"
      value="false"
    />
  </div>
</label>
`;

exports[`TmField displays a number input 1`] = `
<input
  class="tm-field"
  type="number"
/>
`;

exports[`TmField displays a textarea 1`] = `
<textarea
  class="tm-field"
/>
`;

exports[`TmField displays a toggle 1`] = `
<label
  class="tm-toggle unchecked"
>
  <div
    class="tm-toggle-wrapper"
  >
    <span>
      
      off
    
    </span>
     
    <div
      class="toggle-option-checked"
    >
      <div>
        on
      </div>
    </div>
     
    <div
      class="toggle-option-unchecked"
    >
      <div>
        off
      </div>
    </div>
     
    <div
      class="toggle-handle"
    />
     
    <input
      type="checkbox"
      value="false"
    />
  </div>
</label>
`;

exports[`TmField displays a toggle 2`] = `
<label
  class="tm-toggle unchecked"
>
  <div
    class="tm-toggle-wrapper"
  >
    <span>
      
      bad
    
    </span>
     
    <div
      class="toggle-option-checked"
    >
      <div>
        cool
      </div>
    </div>
     
    <div
      class="toggle-option-unchecked"
    >
      <div>
        bad
      </div>
    </div>
     
    <div
      class="toggle-handle"
    />
     
    <input
      type="checkbox"
      value="false"
    />
  </div>
</label>
`;

exports[`TmField displays a toggle 3`] = `
<label
  class="tm-toggle"
>
  <div
    class="tm-toggle-wrapper"
  >
    <span>
      
      cool
    
    </span>
     
    <div
      class="toggle-option-checked"
    >
      <div>
        cool
      </div>
    </div>
     
    <div
      class="toggle-option-unchecked"
    >
      <div>
        bad
      </div>
    </div>
     
    <div
      class="toggle-handle"
    />
     
    <input
      type="checkbox"
      value="true"
    />
  </div>
</label>
`;

exports[`TmField displays as a select 1`] = `
<select
  class="tm-field tm-field-select"
>
  <option
    disabled="disabled"
    hidden="hidden"
    selected="selected"
    value=""
  >
    
    Select option...
  
  </option>
   
</select>
`;

exports[`TmField displays as a select 2`] = `
<select
  class="tm-field tm-field-select"
>
  <option
    disabled="disabled"
    hidden="hidden"
    selected="selected"
    value=""
  >
    
    Select option...
  
  </option>
   
  <option
    value="1"
  >
    
      1
    
  </option>
  <option
    value="2"
  >
    
      2
    
  </option>
</select>
`;

exports[`TmField displays as a select 3`] = `
<select
  class="tm-field tm-field-select"
>
  <option
    disabled="disabled"
    hidden="hidden"
    selected="selected"
    value=""
  >
    
    Select a number...
  
  </option>
   
  <option
    value="1"
  >
    
      1
    
  </option>
  <option
    value="2"
  >
    
      2
    
  </option>
</select>
`;

exports[`TmField has the expected html structure 1`] = `
<input
  class="tm-field"
  type="text"
/>
`;
